<resources>
    <string name="app_name">MasterMind</string>
    <string name="MemoTitle">Title</string>
    <string name="MemoMemo">Memo</string>
    <string name="EditMemoEditTitle">Edit Title</string>
    <string name="EditMemoEditMemo">Edit Memo</string>
    <string name="EditMemo_buttonSave">Save</string>
    <string name="EditMemo_buttonDiscard">Discard</string>
    <string name="add_memo_save_button">Add Memo</string>
    <string name="add_discard_memo_button">Discard Memo</string>
    <string name="add_insert_title_textview">Insert Title</string>
    <string name="add_insert_memo_textview">Insert Memo</string>
    <string name="edit_update_memo">Update Memo</string>
    <string name="edit_delete_memo">Delete Memo</string>
    <string name="add_memo_discard_button">Discard</string>
    <string name="editlayout_btnchart_fun_facts">Fun Facts</string>
    <string name="memo_btn_date_reminder">Set Reminder</string>
</resources>
